2x pgs and 2x error pgs designs

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -31,7 +31,7 @@ $govuk-assets-path: '/govuk/assets/';
 // new bespoke .psd- css styles, start here...
 main.govuk-main-wrapper {
     @include govuk-media-query($from: desktop) {
-        min-height: 500px;
+        //min-height: 500px;
     }
 }
 
