--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,7 +31,7 @@
 
       <h2 class="govuk-heading-m"><abbr>PSD</abbr> designs</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="/add-product-v4/start.html">Add Product v4 designs</a></li>
+        <li><a class="govuk-link" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a></li>
 
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
