--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -200,7 +200,7 @@ ul.opss-radio-list--borders {
 
 .govuk-radios--small.govuk-radios--conditional {
     .govuk-radios__conditional.govuk-form-group--error {
-        border-left: 4px solid #d4351c;
+        border-left: 4px solid $error-colour;
     }
     .govuk-radios__conditional.govuk-radios__conditional--hidden.govuk-form-group--error {//helps with smooth loading
         display: block !important;
