error pg updates

--- a/app/views/add-product-v4/select-a-product-error.html
+++ b/app/views/add-product-v4/select-a-product-error.html
@@ -38,7 +38,7 @@ select-a-product{% extends "layout-01.html" %}
 
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-fieldset__heading">
-                            Select a product <!--from the list-->
+                            Select the product <!--from the list-->
                         </h1>
                     </legend>
 
