--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,9 +29,14 @@
 
       <h1 class="govuk-heading-l">Darren &hellip;</h1>
 
+      <p class="govuk-body">Additional <b>CSS/SASS</b> styles: app/assets/sass/application.scss</p>
+
       <h2 class="govuk-heading-m"><abbr>PSD</abbr> designs</h2>
 
-      <p class="govuk-body"><a href="/case-owner-change-page/improve-case-owner-change-page">Improve case owner change page (HTML)</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/case-owner-change-page/improve-case-owner-change-page">Improve case owner change page (HTML)</a></li>
+        <li><a href="/case-owner-change-page/improve-case-owner-change-page-error">Improve case owner change page (HTML) errors</a></li>
+      </ul>
 
       <hr>
 
