--- a/app/views/add-product-v4/is-case-counterfeit-error.html
+++ b/app/views/add-product-v4/is-case-counterfeit-error.html
@@ -29,7 +29,7 @@
     <div class="govuk-grid-column-full">
 
 
-      <form class="form" action="#" method="post" novalidate>
+      <form action="#" method="post" novalidate>
 
 
 {{ govukRadios({
