--- a/app/views/add-product-v4/what-is-the-product-name.html
+++ b/app/views/add-product-v4/what-is-the-product-name.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
 
-      <form class="form" action="#" method="post" novalidate>
+      <form action="#" method="post" novalidate>
 
 
 {{ govukInput({
@@ -33,7 +33,7 @@
     classes: "govuk-!-margin-bottom-6",
     html: "Try to include a model number and model name. <br>For example, PlayStation 5, or EH-NE83-K895 Power Air."
   },
-  type: "search",
+  type: "text",
   classes: "govuk-!-width-two-thirds",
   id: "productname",
   name: "productname"
