--- a/app/views/add-product-v4/do-you-have-the-barcode.html
+++ b/app/views/add-product-v4/do-you-have-the-barcode.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
 
-      <form class="form" action="#" method="post" novalidate>
+      <form action="#" method="post" novalidate>
 
 
 {% set yesHtml %}
