--- a/app/views/add-product-v4/select-a-product-error.html
+++ b/app/views/add-product-v4/select-a-product-error.html
@@ -32,7 +32,7 @@ select-a-product{% extends "layout-01.html" %}
     <div class="govuk-grid-column-full">
 
 
-        <form class="form" action="#" method="post" novalidate>
+        <form action="#" method="post" novalidate>
             <div class="govuk-form-group govuk-form-group--error">
                 <fieldset class="govuk-fieldset" aria-describedby="product-hint">
 
