--- a/app/views/add-product-v4/what-is-the-product-name-error.html
+++ b/app/views/add-product-v4/what-is-the-product-name-error.html
@@ -28,7 +28,7 @@
     <div class="govuk-grid-column-full">
 
 
-      <form class="form" action="#" method="post" novalidate>
+      <form action="#" method="post" novalidate>
 
 
 {{ govukInput({
@@ -47,7 +47,7 @@
   errorMessage: {
     text: "Enter the product name"
   },
-  type: "search",
+  type: "text",
   classes: "govuk-!-width-two-thirds",
   id: "productname",
   name: "productname"
