--- a/app/views/add-product-v4/select-a-product-list-04.html
+++ b/app/views/add-product-v4/select-a-product-list-04.html
@@ -37,7 +37,7 @@
 
                     <div class="govuk-grid-row">
                         <div class="govuk-grid-column-three-quarters">
-                            <ul class="govuk-list govuk-radios govuk-radios--small xxxgovuk-list--spaced opss-radio-list--borders">
+                            <ul class="govuk-list govuk-radios govuk-radios--small xxxgovuk-list--spaced opss-radio-list opss-radio-list--borders opss-radio-list--no-top-border">
                                 <li>
 
                                     <div  class="govuk-radios__item">
@@ -46,7 +46,7 @@
                                             Hyper Clean - Series 1000 masks
                                         </label>
                                         <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
-                                            Personal protective equipment (PPE), Face covering and UKCA, CE markings.
+                                            Personal protective equipment (PPE), Face covering and UKCA, CE marking.
                                         </div>
                                     </div>
 
@@ -59,7 +59,7 @@
                                             Dyson - Supersonic
                                         </label>
                                         <div id="product-item-02-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
-                                            Lorem ipsum (SKKR), electricals and CE markings.
+                                            Lorem ipsum (SKKR), electricals and CE marking.
                                         </div>
                                     </div>
 
@@ -72,7 +72,7 @@
                                             Honda - Red Stripe VII
                                         </label>
                                         <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
-                                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX markings.
+                                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX marking.
                                         </div>
                                     </div>
 
@@ -85,7 +85,7 @@
                                             Panasonic - Super Fast XD
                                         </label>
                                         <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
-                                            Electrical equipment (SKKR), Radios and CE markings.
+                                            Electrical equipment (SKKR), Radios and CE marking.
                                         </div>
                                     </div>
 
