--- a/app/views/add-product-v4/select-a-product-old-error.html
+++ b/app/views/add-product-v4/select-a-product-old-error.html
@@ -57,7 +57,7 @@ select-a-product{% extends "layout-01.html" %}
                                 <span class="govuk-visually-hidden">Error:</span> Select a product or select add a new product
                             </span>
 
-                            <ul class="govuk-list govuk-radios govuk-radios--small opss-radio-list--borders">
+                            <ul class="govuk-list govuk-radios govuk-radios--small opss-radio-list opss-radio-list--borders opss-radio-list--no-top-border">
                                 <li>
 
                                     <div  class="govuk-radios__item">
@@ -66,7 +66,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Hyper Clean - Series 1000 masks
                                         </label>
                                         <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Personal protective equipment (PPE), Face covering and UKCA, CE markings.
+                                            Personal protective equipment (PPE), Face covering and UKCA, CE marking.
                                         </div>
                                     </div>
 
@@ -79,7 +79,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Dyson - Supersonic
                                         </label>
                                         <div id="product-item-02-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem ipsum (SKKR), electricals and CE markings.
+                                            Lorem ipsum (SKKR), electricals and CE marking.
                                         </div>
                                     </div>
 
@@ -92,7 +92,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Honda - Red Stripe VII
                                         </label>
                                         <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX markings.
+                                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX marking.
                                         </div>
                                     </div>
 
@@ -105,7 +105,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Panasonic - Super Fast XD
                                         </label>
                                         <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Electrical equipment (SKKR), Radios and CE markings.
+                                            Electrical equipment (SKKR), Radios and CE marking.
                                         </div>
                                     </div>
 
@@ -118,7 +118,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Super Hyper Clean - Series 707 mask
                                         </label>
                                         <div id="product-item-05-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Personal protective equipment (PPE), Face covering and UKCA, CE markings.
+                                            Personal protective equipment (PPE), Face covering and UKCA, CE marking.
                                         </div>
                                     </div>
 
@@ -131,7 +131,7 @@ select-a-product{% extends "layout-01.html" %}
                                             Vax - Supersonic 100
                                         </label>
                                         <div id="product-item-06-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem ipsum (SKKR), electricals and CE markings.
+                                            Lorem ipsum (SKKR), electricals and CE marking.
                                         </div>
                                     </div>
 
