--- a/app/views/add-product-v4/select-a-product.html
+++ b/app/views/add-product-v4/select-a-product.html
@@ -13,146 +13,125 @@ select-a-product{% extends "layout-01.html" %}
 
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full govuk-!-margin-bottom-7">
 
+            <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Select the product</h1>
 
-        <form action="#" method="post" novalidate>
-            <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="product-hint">
-
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        <h1 class="govuk-fieldset__heading">
-                            Select the product <!--from the list-->
-                        </h1>
-                    </legend>
-
-                    <div class="govuk-grid-row govuk-!-margin-bottom-6">
-                        <div class="govuk-grid-column-three-quarters">
-                            <div id="product-hint">
-                                <div class="govuk-hint">
-                                    One or more products that match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>, have already been reported.
-                                </div>
-                                <div class="govuk-hint">
-                                    <!--Select a reported product or add a new product to our records.
-                                    Select your product if it has already been reported or add a new product to our records.
-                                    If your product is not shown <span class="govuk-visually-hidden">or listed below</span>then add a new product to our records.-->
-                                    Select your product if it appears in the list or add a new product to our records.
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="govuk-grid-row">
-                        <div class="govuk-grid-column-three-quarters">
-                            <ul class="govuk-list govuk-radios govuk-radios--small opss-radio-list--borders">
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-01" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-01-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-01">
-                                            Hyper Clean - Series 1000 masks
-                                        </label>
-                                        <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Personal protective equipment (PPE), Face covering and UKCA, CE markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-02" name="product-item" type="radio" value="government-gateway-02" aria-describedby="product-item-02-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-02">
-                                            Dyson - Supersonic
-                                        </label>
-                                        <div id="product-item-02-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem ipsum (SKKR), electricals and CE markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-03" name="product-item" type="radio" value="government-gateway-03" aria-describedby="product-item-03-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-03">
-                                            Honda - Red Stripe VII
-                                        </label>
-                                        <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-04" name="product-item" type="radio" value="government-gateway-04" aria-describedby="product-item-04-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-04">
-                                            Panasonic - Super Fast XD
-                                        </label>
-                                        <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Electrical equipment (SKKR), Radios and CE markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-05" name="product-item" type="radio" value="government-gateway-05" aria-describedby="product-item-05-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-05">
-                                            Super Hyper Clean - Series 707 mask
-                                        </label>
-                                        <div id="product-item-05-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Personal protective equipment (PPE), Face covering and UKCA, CE markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-06" name="product-item" type="radio" value="government-gateway-06" aria-describedby="product-item-06-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-06">
-                                            Vax - Supersonic 100
-                                        </label>
-                                        <div id="product-item-06-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem ipsum (SKKR), electricals and CE markings.
-                                        </div>
-                                    </div>
-
-                                </li>
-                                <li>
-                                    <div class="govuk-radios__divider govuk-!-margin-top-6 govuk-!-margin-bottom-3">or</div>
-
-                                    <div class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="add-product" name="product-item" type="radio" value="add">
-                                        <label class="govuk-label govuk-radios__label" for="add-product">
-                                            Add a new product
-                                        </label>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                </fieldset>
+            <div id="product-hint" class="govuk-hint">
+                Select your product if it appears in the list or add a new product to our records.
             </div>
-
-            <div class="govuk-button-group govuk-!-margin-top-6 govuk-!-margin-bottom-6">
-                <button class="govuk-button" data-module="govuk-button">
-                    Continue
-                </button>
-
-                <a class="govuk-link govuk-link--no-visited-state" href="search-for-an-existing-product.html">Search again</a>
-            </div>
-
-        </form>
-
 
     </div>
-  </div>
-{% endblock %}
+</div>
 
+<div class="govuk-grid-row">
+    <section class="govuk-grid-column-two-thirds">
+
+        <div class="govuk-grid-row">
+           <div class="govuk-grid-column-full govuk-!-margin-bottom-1">
+                <p class="govuk-body-s">
+                   <span id="opss-qty">19</span> products that match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>, have already been reported.
+                </p>
+           </div>
+        </div>
+
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full" role="region" aria-label="matching-products-list">
+                <ul class="govuk-list opss-list--borders">
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Hyper Clean - Series 1000 masks</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Personal protective equipment (PPE), Face covering and UKCA, CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Dyson - Supersonic</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Lorem ipsum (SKKR), electricals and CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Honda - Red Stripe VII</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                           Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Panasonic - Super Fast XD</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Electrical equipment (SKKR), Radios and CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Super Hyper Clean - Series 707 mask</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Personal protective equipment (PPE), Face covering and UKCA, CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Vax - Supersonic 100</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Lorem ipsum (SKKR), electricals and CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Dyson - Supersonic</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Lorem ipsum (SKKR), electricals and CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Honda - Red Stripe VII</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Dyson - Supersonic</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                            Lorem ipsum (SKKR), electricals and CE marking.
+                        </div>
+                    </li>
+                    <li>
+                        <a href="how-many-units-are-affected" class="govuk-link govuk-!-font-weight-bold govuk-!-display-inline-block govuk-!-font-size-19  govuk-!-margin-bottom-1">Honda - Red Stripe VII</a>
+                        <div class="govuk-!-font-size-16 govuk-!-margin-bottom-1">
+                           Motor vehicle (PPE), motorbikes, and UKCA, CE, EUXX marking.
+                        </div>
+                    </li>
+                </ul>
+
+                <nav class="opss-pagination-link">
+                    <ul>
+                        <li class="opss-pagination-link__wrap opss-pagination-link--prev">
+                                <a href="" class="govuk-link govuk-link--no-visited-state">
+                                    <span>Previous page</span><span class="govuk-visually-hidden">:</span> <span>Page 1 of 3</span>
+                                </a>
+                            </li>
+                            <li class="opss-pagination-link__wrap opss-pagination-link--next">
+                                <a href="" class="govuk-link govuk-link--no-visited-state">
+                                    <span>Next page</span><span class="govuk-visually-hidden">:</span> <span>Page 3 of 3</span>
+                                </a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
+
+    </section>
+
+    <section class="govuk-grid-column-one-third">
+        <h2 class="govuk-heading-s">Add a new product</h2>
+        <div class="govuk-hint govuk-!-font-size-16">
+            <span class="opss-block--desktop">If you cannot find your product,</span> add your product to our records.
+        </div>
+        <a href="does-the-product-have-a-brand.html" class="govuk-button govuk-button--secondary">Add a product</a>
+
+        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+        <p class="govuk-body-s">Or <a href="search-for-an-existing-product.html" class="govuk-link govuk-link--no-visited-state">search again</a></p>
+    </section>
+</div>
+
+{% endblock %}
