--- a/app/views/add-product-v4/upload-a-product-image-error-2.html
+++ b/app/views/add-product-v4/upload-a-product-image-error-2.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Provide an image
+    Can you provide an image of the product
 {% endblock %}
 
 {% block beforeContent %}
@@ -45,83 +45,88 @@
 }) }}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
 
 {% set yesHtml %}
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-form-group govuk-!-margin-top-4 govuk-form-group--error">
+          <label class="govuk-label" for="uploadfile">
+              Upload the image file
+          </label>
+          <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
+            Do not upload case images related to damage or incidents.
+          </div>
+          <span id="uploadfile-error" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> Choose an image file to upload
+          </span>
+          <div class="govuk-!-padding-top-1">
+              <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint uploadfile-error">
+          </div>
+      </div>
 
-    <div class="govuk-form-group govuk-!-margin-top-4 govuk-form-group--error">
-        <label class="govuk-label" for="uploadfile">
-            Upload the image file
-        </label>
-        <span id="uploadfile-error" class="govuk-error-message">
-            <span class="govuk-visually-hidden">Error:</span> Choose an image file to upload
-        </span>
-        <div class="govuk-!-padding-top-1">
-            <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-error">
-        </div>
+      {{ govukInput({
+          label: {
+              text: "Provide a title",
+              isPageHeading: false
+          },
+          hint: {
+              classes: "govuk-!-font-size-16",
+              text: "For example, PlayStation 5 or Dyson Power Wave 3300."
+          },
+          errorMessage: {
+              text: "Enter a title for the image"
+          },
+          classes: "govuk-input--width-20",
+          id: "imagetitle",
+          name: "imagetitle",
+          attributes: {
+              maxlength: "250"
+          }
+      }) }}
+
+      {{ govukCharacterCount({
+          name: "imagedesc",
+          id: "imagedesc",
+          maxlength: 200,
+          label: {
+              text: "Describe what the image shows",
+              isPageHeading: false
+          },
+          hint: {
+              classes: "govuk-!-font-size-16",
+              text: "For example, an unboxed white Ikea TATO table lamp."
+          },
+          errorMessage: {
+              text: "Enter a description of the image"
+          }
+      }) }}
+
+      {{ govukRadios({
+          classes: "govuk-radios--inline govuk-radios--small",
+          idPrefix: "another",
+          name: "another",
+          fieldset: {
+              legend: {
+              text: "Would you like to add another image after this one?"
+              }
+          },
+          items: [
+              {
+              value: "yes",
+              text: "Yes"
+              },
+              {
+              checked: true,
+              value: "no",
+              text: "No"
+              }
+          ]
+      }) }}
     </div>
-
-    {{ govukInput({
-        label: {
-            text: "Provide a title",
-            isPageHeading: false
-        },
-        hint: {
-            classes: "govuk-!-font-size-16",
-            text: "For example, PlayStation 5 or Dyson Power Wave 3300."
-        },
-        errorMessage: {
-            text: "Enter a title for the image"
-        },
-        classes: "govuk-input--width-20",
-        id: "imagetitle",
-        name: "imagetitle",
-        attributes: {
-            maxlength: "250"
-        }
-    }) }}
-
-    {{ govukCharacterCount({
-        name: "imagedesc",
-        id: "imagedesc",
-        maxlength: 200,
-        label: {
-            text: "Describe what the image shows",
-            isPageHeading: false
-        },
-        hint: {
-            classes: "govuk-!-font-size-16",
-            text: "For example, an unboxed white Ikea FADO table lamp."
-        },
-        errorMessage: {
-            text: "Enter a description of the image"
-        }
-    }) }}
-
-    {{ govukRadios({
-        classes: "govuk-radios--inline govuk-radios--small",
-        idPrefix: "another",
-        name: "another",
-        fieldset: {
-            legend: {
-            text: "Would you like to add another image after this one?"
-            }
-        },
-        items: [
-            {
-            value: "yes",
-            text: "Yes"
-            },
-            {
-            checked: true,
-            value: "no",
-            text: "No"
-            }
-        ]
-    }) }}
-
+</div>
 {% endset -%}
 
 {{ govukRadios({
@@ -130,7 +135,7 @@
     classes: "govuk-!-padding-top-3",
     fieldset: {
         legend: {
-            text: "Can you provide a product image?",
+            text: "Can you provide an image of the product?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
         }
