--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Provide an image
+    Can you provide an image of the product
 {% endblock %}
 
 {% block beforeContent %}
@@ -25,74 +25,79 @@
 }) }}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
 
 {% set yesHtml %}
-
-    <div class="govuk-form-group govuk-!-margin-top-4">
-        <label class="govuk-label" for="uploadfile">
-            Upload the image file
-        </label>
-        <div class="govuk-!-padding-top-1">
-            <input type="file" id="uploadfile" name="uploadfile">
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-form-group govuk-!-margin-top-4">
+            <label class="govuk-label" for="uploadfile">
+                Upload the image file
+            </label>
+            <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
+                Do not upload case images related to damage or incidents.
+            </div>
+            <div class="govuk-!-padding-top-1">
+                <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint">
+            </div>
         </div>
-    </div>
 
-    {{ govukInput({
-        label: {
-            text: "Provide a title",
-            isPageHeading: false
-        },
-        hint: {
-            classes: "govuk-!-font-size-16",
-            text: "For example, PlayStation 5 or Dyson Power Wave 3300."
-        },
-        classes: "govuk-input--width-20",
-        id: "imagetitle",
-        name: "imagetitle",
-        attributes: {
-            maxlength: "250"
-        }
-    }) }}
-
-    {{ govukCharacterCount({
-        name: "imagedesc",
-        id: "imagedesc",
-        maxlength: 200,
-        label: {
-            text: "Describe what the image shows",
-            isPageHeading: false
-        },
-        hint: {
-            classes: "govuk-!-font-size-16",
-            text: "For example, an unboxed white Ikea FADO table lamp."
-        }
-    }) }}
-
-    {{ govukRadios({
-        classes: "govuk-radios--inline govuk-radios--small",
-        idPrefix: "another",
-        name: "another",
-        fieldset: {
-            legend: {
-            text: "Would you like to add another image after this one?"
-            }
-        },
-        items: [
-            {
-            value: "yes",
-            text: "Yes"
+        {{ govukInput({
+            label: {
+                text: "Provide a title",
+                isPageHeading: false
             },
-            {
-            checked: true,
-            value: "no",
-            text: "No"
+            hint: {
+                classes: "govuk-!-font-size-16",
+                text: "For example, PlayStation 5 or Dyson Power Wave 3300."
+            },
+            classes: "govuk-input--width-20",
+            id: "imagetitle",
+            name: "imagetitle",
+            attributes: {
+                maxlength: "250"
             }
-        ]
-    }) }}
+        }) }}
 
+        {{ govukCharacterCount({
+            name: "imagedesc",
+            id: "imagedesc",
+            maxlength: 200,
+            label: {
+                text: "Describe what the image shows",
+                isPageHeading: false
+            },
+            hint: {
+                classes: "govuk-!-font-size-16",
+                text: "For example, an unboxed white Ikea TATO table lamp."
+            }
+        }) }}
+
+        {{ govukRadios({
+            classes: "govuk-radios--inline govuk-radios--small",
+            idPrefix: "another",
+            name: "another",
+            fieldset: {
+                legend: {
+                text: "Would you like to add another image after this one?"
+                }
+            },
+            items: [
+                {
+                value: "yes",
+                text: "Yes"
+                },
+                {
+                checked: true,
+                value: "no",
+                text: "No"
+                }
+            ]
+        }) }}
+    </div>
+</div>
 {% endset -%}
 
 {{ govukRadios({
@@ -101,7 +106,7 @@
     classes: "govuk-!-padding-top-3",
     fieldset: {
         legend: {
-            text: "Can you provide a product image?",
+            text: "Can you provide an image of the product?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
         }
