why is the product of concern split and added

--- a/app/views/add-product-v4/describe-the-product.html
+++ b/app/views/add-product-v4/describe-the-product.html
@@ -7,9 +7,9 @@
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "does-the-product-have-marking"
+        href: "might-already-exist"
     }) }}
-{% endblock %}
+{% endblock %}<!-- BACK: *** this might be 'might-already-exist' OR 'does-the-product-have-marking' (depending upon whether 'might-already-exist' was served/injected into the journey *** -->
 
 
 {% block content %}
