--- a/app/views/add-product-v4/start.html
+++ b/app/views/add-product-v4/start.html
@@ -27,7 +27,7 @@
 
 
 
-      <p>The 'Add Product V4' design flow: </p>
+      <p class="govuk-body">The 'Add Product V4' design flow: </p>
 
       <a href="is-this-case-related-to-covid.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
         Start: &nbsp;<span style="font-weight: normal;">Open a new case</span>
@@ -36,6 +36,7 @@
         </svg>
       </a>
 
+      <p class="govuk-body-l">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
 
     </div>
 
