--- a/app/views/add-product-v4/does-the-product-have-a-brand-error.html
+++ b/app/views/add-product-v4/does-the-product-have-a-brand-error.html
@@ -29,7 +29,7 @@
 
 
       <form action="#" method="post" novalidate>
-
+        <span class="govuk-caption-l">Add a product</span>
 
 {% set yesHtml %}
 {{ govukInput({
