--- a/app/views/add-product-v4/describe-the-product-error.html
+++ b/app/views/add-product-v4/describe-the-product-error.html
@@ -50,6 +50,9 @@
   },
   errorMessage: {
     text: "The additional information must be 1000 characters or fewer"
+  },
+  countMessage: {
+      classes: "govuk-!-font-size-16"
   }
 }) }}
 
