--- a/app/views/add-product-v4/describe-the-product.html
+++ b/app/views/add-product-v4/describe-the-product.html
@@ -33,6 +33,9 @@
   hint: {
     classes: "govuk-!-margin-bottom-6",
     text: "Enter additional information about the product. For example, colour and size or a description of the packaging. (Do not add case information about damage or incidents)."
+  },
+  countMessage: {
+      classes: "govuk-!-font-size-16"
   }
 }) }}
 
