--- a/app/views/add-product-v4/does-the-product-have-marking.html
+++ b/app/views/add-product-v4/does-the-product-have-marking.html
@@ -50,7 +50,7 @@
 {{ govukRadios({
     idPrefix: "marking",
     name: "marking",
-    classes: "govuk-!-padding-top-3",
+    classes: "govuk-!-padding-top-3 govuk-!-padding-bottom-1",
     fieldset: {
         legend: {
             text: "Does the product have any marking?",
