--- a/app/views/add-product-v4/might-already-exist.html
+++ b/app/views/add-product-v4/might-already-exist.html
@@ -10,6 +10,6 @@ Product info: Title, all details and its description (and image).
 
 Yes<br><br>
 
-No (continue adding your product)<br><br>
+No (I'll continue to add my product)<br><br>
 
 <a href="describe-the-product.html">Continue</a>
