--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -1,13 +1,13 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Can you provide an image of the product
+    Upload a product image
 {% endblock %}
 
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "when-was-the-product-placed"
+        href: "can-you-provide-an-image"
     }) }}
 {% endblock %}
 
@@ -18,46 +18,87 @@
   titleText: "There is a problem",
   errorList: [
     {
-      text: "Select yes if you can provide a product image",
-      href: "#productimage"
+      text: "Choose an image file to upload",
+      href: "#uploadfile"
+    },
+    {
+      text: "Enter a title for the image",
+      href: "#imagetitle"
+    },
+    {
+      text: "Enter a description of the image",
+      href: "#imagedesc"
+    },
+    {
+      text: "Select yes if you would like to add another image after this one",
+      href: "#another"
+    },
+    {
+      text: "Upload a different image - image file types must end with .png, .jpg or .jpeg",
+      href: "#uploadfile"
+    },
+    {
+      text: "Change the image title - an image using this title already exists",
+      href: "#imagetitle"
+    },
+    {
+      text: "Description of what the image shows must be 200 characters or fewer",
+      href: "#imagedesc"
     }
   ]
 }) }}
+
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
 
-{% set yesHtml %}
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                    <h1 class="govuk-heading-l">
+                        Upload a product image
+                    </h1>
+                </div>
+            </div>
+
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-form-group govuk-!-margin-top-4">
-            <label class="govuk-label" for="uploadfile">
-                Upload the image file
-            </label>
-            <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
-                Do not upload case images related to damage or incidents.
-            </div>
-            <div class="govuk-!-padding-top-1">
-                <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint">
-            </div>
-        </div>
+      <div class="govuk-form-group govuk-!-margin-top-4 govuk-form-group--error">
+          <label class="govuk-label govuk-label--s" for="uploadfile">
+              Upload the image file
+          </label>
+          <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
+            Do not upload case images related to damage or incidents.
+          </div>
+          <span id="uploadfile-error" class="govuk-error-message">
+              <span class="govuk-visually-hidden">Error:</span> Choose an image file to upload
+          </span>
+          <div class="govuk-!-padding-top-1">
+              <input type="file" id="uploadfile" name="uploadfile" aria-describedby="uploadfile-hint uploadfile-error">
+          </div>
+      </div>
 
         {{ govukInput({
             label: {
                 text: "Provide a title",
-                isPageHeading: false
+                isPageHeading: false,
+                classes: "govuk-label--s"
             },
             hint: {
                 classes: "govuk-!-font-size-16",
                 text: "For example, PlayStation 5 or Dyson Power Wave 3300."
             },
+            errorMessage: {
+                text: "Enter a title for the image"
+            },
             classes: "govuk-input--width-20",
             id: "imagetitle",
             name: "imagetitle",
             attributes: {
-                maxlength: "250"
+                maxlength: "250",
+                autocomplete: "off"
             }
         }) }}
 
@@ -67,11 +108,21 @@
             maxlength: 200,
             label: {
                 text: "Describe what the image shows",
-                isPageHeading: false
+                isPageHeading: false,
+                classes: "govuk-label--s"
             },
             hint: {
                 classes: "govuk-!-font-size-16",
                 text: "For example, an unboxed white Ikea TATO table lamp."
+            },
+            errorMessage: {
+                text: "Enter a description of the image"
+            },
+            countMessage: {
+                classes: "govuk-!-font-size-16"
+            },
+            attributes: {
+                autocomplete: "off"
             }
         }) }}
 
@@ -81,8 +132,12 @@
             name: "another",
             fieldset: {
                 legend: {
-                text: "Would you like to add another image after this one?"
+                text: "Would you like to add another image after this one?",
+                classes: "govuk-label--s"
                 }
+            },
+            errorMessage: {
+                text: "Select yes if you would like to add another image after this one"
             },
             items: [
                 {
@@ -90,7 +145,6 @@
                 text: "Yes"
                 },
                 {
-                checked: true,
                 value: "no",
                 text: "No"
                 }
@@ -98,36 +152,9 @@
         }) }}
     </div>
 </div>
-{% endset -%}
 
-{{ govukRadios({
-    idPrefix: "productimage",
-    name: "productimage",
-    classes: "govuk-!-padding-top-3",
-    fieldset: {
-        legend: {
-            text: "Can you provide an image of the product?",
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-        }
-    },
-    errorMessage: {
-        text: "Select yes if you can provide a product image"
-    },
-    items: [
-    {
-        value: "yes",
-        text: "Yes",
-        conditional: {
-        html: yesHtml
-        }
-    },
-    {
-      value: "no",
-      text: "No"
-    }
-  ]
-}) }}
+
+
 
 {{ govukButton({
   text: "Continue"
