--- a/app/views/add-product-v4/upload-a-product-image.html
+++ b/app/views/add-product-v4/upload-a-product-image.html
@@ -1,13 +1,13 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Can you provide an image of the product
+    Upload a product image
 {% endblock %}
 
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "when-was-the-product-placed"
+        href: "can-you-provide-an-image"
     }) }}
 {% endblock %}
 
@@ -18,11 +18,19 @@
 
         <form action="#" method="post" novalidate>
 
-{% set yesHtml %}
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-full">
+                    <h1 class="govuk-heading-l">
+                        Upload a product image
+                    </h1>
+                </div>
+            </div>
+
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-form-group govuk-!-margin-top-4">
-            <label class="govuk-label" for="uploadfile">
+        <div class="govuk-form-group govuk-!-padding-top-3">
+            <label class="govuk-label govuk-label--s" for="uploadfile">
                 Upload the image file
             </label>
             <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
@@ -36,7 +44,8 @@
         {{ govukInput({
             label: {
                 text: "Provide a title",
-                isPageHeading: false
+                isPageHeading: false,
+                classes: "govuk-label--s"
             },
             hint: {
                 classes: "govuk-!-font-size-16",
@@ -46,7 +55,8 @@
             id: "imagetitle",
             name: "imagetitle",
             attributes: {
-                maxlength: "250"
+                maxlength: "250",
+                autocomplete: "off"
             }
         }) }}
 
@@ -56,11 +66,18 @@
             maxlength: 200,
             label: {
                 text: "Describe what the image shows",
-                isPageHeading: false
+                isPageHeading: false,
+                classes: "govuk-label--s"
             },
             hint: {
                 classes: "govuk-!-font-size-16",
                 text: "For example, an unboxed white Ikea TATO table lamp."
+            },
+            countMessage: {
+                classes: "govuk-!-font-size-16"
+            },
+            attributes: {
+                autocomplete: "off"
             }
         }) }}
 
@@ -70,7 +87,8 @@
             name: "another",
             fieldset: {
                 legend: {
-                text: "Would you like to add another image after this one?"
+                text: "Would you like to add another image after this one?",
+                classes: "govuk-label--s"
                 }
             },
             items: [
@@ -79,7 +97,6 @@
                 text: "Yes"
                 },
                 {
-                checked: true,
                 value: "no",
                 text: "No"
                 }
@@ -87,33 +104,9 @@
         }) }}
     </div>
 </div>
-{% endset -%}
 
-{{ govukRadios({
-    idPrefix: "productimage",
-    name: "productimage",
-    classes: "govuk-!-padding-top-3",
-    fieldset: {
-        legend: {
-            text: "Can you provide an image of the product?",
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-        }
-    },
-    items: [
-    {
-        value: "yes",
-        text: "Yes",
-        conditional: {
-        html: yesHtml
-        }
-    },
-    {
-      value: "no",
-      text: "No"
-    }
-  ]
-}) }}
+
+
 
 {{ govukButton({
   text: "Continue"
